<resources>
    <string name="app_name">GOSSIP GIRL</string>
    <string name="description_title">What is Gossip Girl?</string>
    <string name="description1">Gossip Girl is an American teen drama television series based on the book series of the same name written by Cecily von Ziegesar.
        The series, created by Josh Schwartz and Stephanie Savage, originally ran on The CW network for six seasons from September 19, 2007, to December 17, 2012.
        \n\nNarrated by the omniscient blogger Gossip Girl (voiced by Kristen Bell), the series revolves around the lives of privileged upper-class adolescents living in the Upper East Side of Manhattan.
        The series begins with the return of Upper East Side teenage "it girl" Serena van der Woodsen (Blake Lively) from a mysterious absence.
        She is reunited with her frenemy Blair Waldorf (Leighton Meester) and her mother Lily (Kelly Rutherford), while she also meets Dan Humphrey (Penn Badgley), an aspiring writer from Brooklyn.
        Other main characters are played by Chace Crawford, Ed Westwick, Taylor Momsen, Jessica Szohr, Matthew Settle and Kaylee DeFer.
        \n\nThe success of Gossip Girl led to adaptations outside the United States.
        The show has received numerous award nominations, winning 18 Teen Choice Awards.
        The CW officially renewed Gossip Girl for a sixth and final season on May 11, 2012.
        The final season, consisting of 10 episodes, premiered on October 8, 2012 and ended on December 17, 2012.</string>
    <string name="characters">Main characters</string>
    <string name="seasons">All seasons</string>
    <string name="menu">Menu</string>
    <string name="what_is_gg">What is Gossip Girl?</string>
    <string name="who_are_you">Which character are you?</string>
    <string name="login">Login</string>
    <string name="name">Name</string>
    <string name="prompt_email">prompt email</string>
    <string name="prompt_password">prompt password</string>
    <string name="register_2">register</string>
    <string name="register">REGISTER</string>
    <string name="confirm_password">confirm password</string>
    <string name="player_error">Error initializing YouTube player: %s</string>
    <string name="seek_to">Jump To</string>
    <string name="seek_to_hint">Seconds</string>
    <string name="trailers">Seasons trailers</string>
    <string name="title_activity_seasons">Seasons</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="home_second">Home Second</string>
    <string name="trailer">Trailer</string>
    <string name="synopsis_s1">The privileged prep school teens on Manhattan\'s Upper East Side first learn that Serena van der Woodsen is back in town the way they learn all the important news in their lives: from the blog of the anonymous Gossip Girl.
        No one knows Gossip Girl\'s identity, but everyone in this exclusive circle relies on her website and text blasts for the latest scoop.
        Even Serena\'s best friend, Blair Waldorf, is surprised to find that Serena has suddenly ended her self-imposed exile to boarding school and returned to Manhattan.
        Whatever the reasons for her return, the change in Serena is obvious, especially to Blair, whose friendship with Serena has always been competitive and difficult.</string>
    <string name="synopsis_s2">As the summer draws to a close in the Hamptons, Serena and Nate have everyone fooled into thinking they are a couple; to cover up the fact that Nate has been having an affair with an older woman.
        Blair returns from abroad with a hot guy on her arm, making a very jealous Chuck question his decision to stop pursuing Blair.
        Meanwhile, Dan has spent the summer assisting a famous author, but finds himself preoccupied with Serena, leading him to take a risk.
        While interning for Eleanor Waldorf\'s company, Jenny procures an invite to the much-anticipated Hampton\'s White Party, with the help of Eric van der Woodsen.</string>
    <string name="synopsis_s3">As the summer is drawing to a close, Blair and Chuck are madly in love and adjusting to their new relationship status, breaking all traditional rules of dating as would be expected.
        Meanwhile, Serena returns from her European adventure with many secrets to hide and Nate returns from his travels with a mysterious brunette in tow.
        With Lily away visiting her mother, Rufus, Dan, and Jenny spend the summer in the Hamptons, adjusting to the van der Woodsen\'s glamorous lifestyle surprisingly faster than any of them expected.
        Also, Vanessa introduces her new friend to Dan and Rufus.</string>
    <string name="synopsis_s4">Serena and Blair enjoy their summer vacation in Paris trying to take their minds off of home.
        Blair scores a date with a man she suspects is a member of a royal family. Meanwhile, Chuck is recovering in Prague after being found by Eva Coupeau, a waitress who does not know his real identity.
        Meanwhile, back in New York, Eleanor helps Lily make arrangements for Fashion\'s Night Out at the van der Woodsen penthouse and Dan deals with raising Georgina\'s newborn son Milo, while Nate meets a potential new love interest, Juliet Sharp.</string>
    <string name="synopsis_s5">While working as a production assistant in Hollywood, Serena makes a mistake while trying to impress her new boss.
        Chuck and Nate also arrive in California, and Nate gets involved with a mysterious older woman. Meanwhile, Blair and Louis return to New York from Monaco after spending the summer planning their wedding.
        Also, Dan gets help from Louis in a desperate attempt to prevent an exposing chapter from being published in a magazine and Blair is hiding a major secret from everyone.</string>
    <string name="synopsis_s6">Blair and Chuck make a deal that involves putting their whole relationship on the line.
        Meanwhile, Dan returns from Italy after deciding to write a revealing book about the Upper East Side\'s scandals with Georgina\'s help.
        Nate is determined to take Gossip Girl down for good by trying to find her real identity. Also, the gang comes together to look for a missing Serena, but the search ends with surprising results.</string>
    <string name="serena">Serena VAN DER WOODSEN</string>
    <string name="serena_actor">Blake Lively</string>
    <string name="serena_description">Serena van der Woodsen is the daughter of William and Lily van der Woodsen.
        The story begins with her return to New York from boarding school.
        Shortly after her return, she realizes a lot has changed since she left.
        Her friends are not too happy about her return, including her best friend Blair Waldorf.
        \nShe then meets Dan Humphrey and the two begin a romantic relationship and soon fall in love.
        Serena\'s storylines often surround her disastrous relationship choices and her struggle to
        find where she fits in the world outside the Upper East Side.
        In the finale, Dan and Serena get married, surrounded by friends and family.
        \nShe appears to be 16 through 21 years old in the series.</string>
    <string name="blair">Blair WALDORF</string>
    <string name="blair_actor"></string>
    <string name="blair_description">Blair is the daughter of Harold and Eleanor Waldorf, respectively a
        successful lawyer and fashion designer. Her parents divorce, and her stepfathers include Roman Garrel
        and Cyrus Rose. After failing to build a future with Nate Archibald, Blair begins a relationship
        with Chuck Bass but later embarks in a failed marriage to Prince Louis Grimaldi.
        Throughout the duration of the series, Blair is aged 16 to 21-22.
        \nBlair\'s storylines often surround her struggle with constantly feeling as if she is in Serena\'s
        shadow and finding how she can shine in her own light. They also surround her romantic relationships,
        namely with Chuck and Louis.</string>
    <string name="dan">Daniel \'Dan\' HUMPHREY</string>
    <string name="dan_actor"></string>
    <string name="dan_description">Dan Humphrey is the son of rock musician Rufus Humphrey and artist
        Alison Humphrey, and is the older brother of Jenny Humphrey. Dan is a writer/poet and used
        to attend the St. Jude\’s School for Boys with eventual friends Chuck Bass and Nate Archibald.
        Although accepted to Yale, he ends up attending NYU. He had a crush on Serena van der Woodsen
        that eventually evolved into a relationship that became the longest on the show.
        He used to despise Serena\’s best friend, Blair Waldorf; but became friends with her and has since dated.
        \nDan is clever, as he was basically the smartest in his class, and also witty and patient;
        he works hard for what he wants and normally achieves his goals. Although inexperienced with
        plotting and manipulation, he demonstrates promise when scheming with Blair.
        Dan reveals at the end of the series that he was Gossip Girl from the beginning for a way
        for him to win Serena by writing himself into the Upper East Side, a task he succeeded in by
        the end of the series. In the finale, Dan and Serena get married, surrounded by friends and family.\n</string>
    <string name="nate">Nathaniel \'Nate\' ARCHIBALD</string>
    <string name="nate_actor"></string>
    <string name="nate_description">Nathaniel \"Nate\" Archibald was born to Howard \"The Captain\" Archibald,
        a successful business magnate and former Navy captain, and Anne Archibald, a member of the Vanderbilt
        family, on April 5th, 1991. Nate is considered to be the \"golden boy of the Upper East Side\".
        Nate is best friends with Chuck Bass, with whom he attends the elite St. Jude\'s School for Boys
        and shares a deep friendship with.
        \nThroughout the show, Nate has been involved in numerous romantic relationships, none of which
        turned out successful. He once said to Dan; that all his life he has chased after girls that
        have been wrong for him. In the finale he is the only main character who is still single.
        \nNate has aspirations for a future in politics, it was for this reason he took an interest
        in running The Spectator. In the finale, Nate on his way to Dan and Serena\'s wedding, tells
        a reporter his intentions of running for mayor of New York; to which he would be the youngest
        mayor in the city\'s history.\n</string>
    <string name="chuck">Charles \'Chuck\' BASS</string>
    <string name="chuck_actor"></string>
</resources>